...
                                <rect key="frame" x="20" y="415" width="374" height="50"/>
                                <color key="backgroundColor" red="0.78280645608901978" green="0.69638699293136597" blue="0.51950424909591675" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="hhe-LT-vBi"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="login:" destination="16W-bW-AKg" eventType="touchUpInside" id="f9D-Er-6sF"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="W4d-ka-VCi">
                                <rect key="frame" x="20" y="299" width="374" height="50"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="6ZE-TP-k9l"/>
                                </constraints>
                                <nil key="textColor"/>
...
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="nextTextField:" destination="16W-bW-AKg" eventType="editingDidEnd" id="ngt-Is-rt1"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vQo-Oe-EGD">
                                <rect key="frame" x="20" y="357" width="374" height="50"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="JSp-lM-Aic"/>
                                </constraints>
                                <nil key="textColor"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JSz-Aw-gQg">
                                <rect key="frame" x="20" y="473" width="374" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="876-vI-9d6"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <state key="normal" title="Want to create an account?">
                                    <color key="titleColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                </state>
                                <connections>
                                    <segue destination="ilj-Rk-Dkf" kind="show" id="xvY-Eb-rlU"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M3W-A2-Sop">
                                <rect key="frame" x="20" y="523" width="374" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="axf-nX-mY6"/>
                                </constraints>
                                <state key="normal" title="Forgot Password?">
                                    <color key="titleColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                </state>
                                <connections>
                                    <action selector="forgotPassword:" destination="16W-bW-AKg" eventType="touchUpInside" id="1Xy-2D-2uJ"/>
                                </connections>
                            </button>
...
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="leftSpacer">
                                        <real key="value" value="8"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Verify Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="haG-W2-VO7">
                                <rect key="frame" x="20" y="419" width="374" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="0ez-3X-tRt"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
...
                                <rect key="frame" x="82" y="742" width="250" height="50"/>
                                <color key="backgroundColor" red="0.78280645609999999" green="0.69638699289999995" blue="0.51950424910000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="250" id="98J-ej-Gfa"/>
                                    <constraint firstAttribute="height" constant="50" id="yag-Dk-UA4"/>
                                </constraints>
                                <state key="normal" title="Sign up">
                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="submitSignUp:" destination="ilj-Rk-Dkf" eventType="touchUpInside" id="6v6-6x-Jzn"/>
                                </connections>
                            </button>
...
