...
            if let err = err {
                print("Error getting documents: \(err)")
            } else {
                for pointDocument in querySnapshot!.documents
                {
                    let id = Int(pointDocument.documentID)!
					let name = pointDocument.data()["Name"] as! String
                    let description = pointDocument.data()["Description"] as! String
                    let residentSubmit = pointDocument.data()["ResidentsCanSubmit"] as! Bool
                    let value = pointDocument.data()["Value"] as! Int
                    let permissionLevel = pointDocument.data()["PermissionLevel"] as! Int
                    let isEnabled = pointDocument.data()["Enabled"] as! Bool
					pointArray.append(PointType(pv: value, pn: name, pd: description , rcs: residentSubmit, pid: id, permissionLevel: PointType.PermissionLevel(rawValue: permissionLevel)!, isEnabled:isEnabled))
...
			houseCodeRef.getDocuments { (querySnapshot, err) in
				var houseCodes = [HouseCode]()
				if err != nil {
					print("Error getting documents: \(String(describing: err))")
				}
				for codeDoc in querySnapshot!.documents {
					let code = codeDoc.data()["Code"] as! String
					let codeName = codeDoc.data()["CodeName"] as! String
					let house = codeDoc.data()["House"] as! String
					let permissionLevel = codeDoc.data()["PermissionLevel"] as! Int
					houseCodes.append(HouseCode.init(code: code, codeName: codeName, permissionLevel: permissionLevel, house: house))
				}
				onDone(houseArray, houseCodes)
...
