//
//  UserForgotPasswordTests.swift
//  PurdueHCRUITests
//
//  Created by Benjamin Hardin on 3/25/19.
//  Copyright © 2019 DecodeProgramming. All rights reserved.
//

import XCTest

class UserForgotPasswordTests: UITestBase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() {
        // Tests the ability for a user to reset their password.
		let app = XCUIApplication()
		app.launch()
		UITestUtils.waitForLoadingToComplete(app: app, test: self)
		UITestUtils.logout(app: app)
		app.buttons["Forgot Password?"].tap()
		let emailTextField = app.alerts.element.textFields["Enter your email"]
		emailTextField.typeText(UITestUtils.RESIDENT_EMAIL)
		app.alerts["Password Recovery"].buttons["OK"].tap()
		app.alerts["Password reset"].buttons["OK"].tap()
    }

}
